// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScriptAttr(CrossOrigin) should override script crossorigin from config: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
+/******/ 	  if (url.indexOf(window.location.origin + '/') !== 0) {
+/******/ 	    result.crossOrigin = 'anonymous';
+/******/ 	  }
"
`;

exports[`ScriptAttr(CrossOrigin) should override script crossorigin from options: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
+/******/ 	  if (url.indexOf(window.location.origin + '/') !== 0) {
+/******/ 	    result.crossOrigin = 'with-credentials';
+/******/ 	  }
"
`;
